--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,6 @@
-beautifulsoup4==4.6.0
-lxml==4.1.1
-numpy==1.14.0
-pandas==0.22.0
-pip==9.0.1
-python-dateutil==2.6.1
-pytz==2017.3
-setuptools==38.4.0
-six==1.11.0
-wheel==0.30.0
+beautifulsoup4
+numpy
+pandas
+requests
+selenium
+lxml
